[gd_scene load_steps=8 format=2]

[ext_resource path="res://mocraAdventure/script_infos_bar/background.png" type="Texture2D" id=1]
[ext_resource path="res://mocraAdventure/script_infos_bar/title_font.tres" type="FontFile" id=2]
[ext_resource path="res://mocraAdventure/script_infos_bar/subhead_font.tres" type="FontFile" id=3]
[ext_resource path="res://mocraAdventure/script_infos_bar/infos_bar.gd" type="Script" id=4]

[sub_resource type="Animation" id=3]
resource_name = "classic_pos"
length = 0.1
tracks/0/type = "bezier"
tracks/0/path = NodePath("titleLabel:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PackedFloat32Array( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 0.1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("titleLabel:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PackedFloat32Array( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 0.1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("titleLabel:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PackedFloat32Array( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 0.1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("titleLabel:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PackedFloat32Array( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 0.1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("titleLabel:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"points": PackedFloat32Array( 448.5, -0.25, 0, 0.25, 0, 448.5, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 0.1 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("titleLabel:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PackedFloat32Array( 18.5, -0.25, 0, 0.25, 0, 18.5, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 0.1 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("subheadLabel:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = false
tracks/6/keys = {
"points": PackedFloat32Array(  ),
"times": PackedFloat32Array(  )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("subheadLabel:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PackedFloat32Array( 107, -0.25, 0, 0.25, 0, 107, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 0.1 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("subheadLabel:modulate:r")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PackedFloat32Array( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 0.1 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("subheadLabel:modulate:g")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PackedFloat32Array( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 0.1 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("subheadLabel:modulate:b")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PackedFloat32Array( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 0.1 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("subheadLabel:modulate:a")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PackedFloat32Array( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 0.1 )
}

[sub_resource type="Animation" id=1]
resource_name = "next_objective"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("titleLabel:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PackedFloat32Array( -47, -0.25, 0, 0.25, 0, 18.5, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("titleLabel:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PackedFloat32Array( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("subheadLabel:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PackedFloat32Array( 171, -0.25, 0, 0.25, 0, 171, -0.25, 0, 0.25, 0, 107, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 1, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("subheadLabel:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PackedFloat32Array( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 1, 1.5, 2 )
}

[sub_resource type="Animation" id=2]
resource_name = "objective_completed"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("titleLabel:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PackedFloat32Array( 1, -0.25, 0, 0.25, 0, 383.785, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 383.785, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 0.4, 0.8, 1.2, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("titleLabel:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PackedFloat32Array( 1, -0.25, 0, 0.25, 0, 0.232896, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.232896, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 0.4, 0.8, 1.2, 2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("titleLabel:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PackedFloat32Array( 1, -0.25, 0, 0.25, 0, 0.232896, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.232896, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 0.4, 0.8, 1.2, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("titleLabel:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PackedFloat32Array( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 1.2, 1.6 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("subheadLabel:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PackedFloat32Array( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 1.2, 1.6 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("subheadLabel:modulate:r")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PackedFloat32Array( 1, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("subheadLabel:modulate:g")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PackedFloat32Array( 1, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("subheadLabel:modulate:b")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PackedFloat32Array( 1, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0 )
}

[node name="Control" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -920.0
offset_bottom = -880.0
texture = ExtResource( 1 )
script = ExtResource( 4 )

[node name="titleLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = -81.5
offset_right = 51.5
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "NA
"

[node name="subheadLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = 7.0
offset_right = 41.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "NA"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/classic_pos = SubResource( 3 )
anims/next_objective = SubResource( 1 )
anims/objective_completed = SubResource( 2 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
